<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:padding="@dimen/dimen_16dp">

                <TextView
                    android:id="@+id/med_detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="40sp"
                    tools:text="Antibiotics" />

                <TextView
                    android:id="@+id/med_detail_complete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    tools:text="90% complete" />
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/info_layout"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_layout"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimen_16dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            android:textColor="@color/sub_title_color"
                            android:text="@string/start_date" />

                        <TextView
                            android:id="@+id/med_details_start"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/dimen_8dp"
                            android:paddingTop="@dimen/dimen_8dp"
                            android:textColor="@color/default_text_color"
                            android:textSize="@dimen/text_size_18sp"
                            tools:text="03/04/2018" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/end_date"
                            android:textAllCaps="true"
                            android:textColor="@color/sub_title_color" />

                        <TextView
                            android:id="@+id/med_details_end"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/dimen_8dp"
                            android:paddingTop="@dimen/dimen_8dp"
                            android:textColor="@color/default_text_color"
                            android:textSize="@dimen/text_size_18sp"
                            tools:text="17/04/2018" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/interval"
                            android:textAllCaps="true"
                            android:textColor="@color/sub_title_color" />

                        <TextView
                            android:id="@+id/med_details_interval"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/dimen_8dp"
                            android:paddingTop="@dimen/dimen_8dp"
                            android:textColor="@color/default_text_color"
                            android:textSize="@dimen/text_size_18sp"
                            tools:text="Every 12 hrs" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/next_time"
                            android:textColor="@color/sub_title_color" />

                        <TextView
                            android:id="@+id/med_details_next"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/dimen_8dp"
                            android:paddingTop="@dimen/dimen_8dp"
                            android:textColor="@color/default_text_color"
                            android:textSize="@dimen/text_size_18sp"
                            tools:text="08:00 PM" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/info_layout"
                android:layout_marginTop="@dimen/dimen_16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textAllCaps="true"
                        android:textColor="@color/sub_title_color" />

                    <TextView
                        android:id="@+id/med_details_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_18sp"
                        tools:text="@string/med_desc" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>